--- a/index.html
+++ b/index.html
@@ -1,84 +1,73 @@
 <html>
     <head>
-        <title>Meu Primeiro Site - Nossos Mares</title>
+        <title>Igualdade Gênero | ODS5 ONU</title>
         <link rel="stylesheet" href="estilo.css">
+        <meta name="viewport" content="width:device-width, initial-scale=1.0">
     </head>
     <body>
         <header>
-            <img id="logo" src="img/logo.png" alt="Nossos Mares">
+            <div id="logodiv">
+                <img id="logo" src="img/images.jpg" alt="Igualdade de Gênero">
+            </div>
             <ul id="Menu">
-                <li><a href="#projeto">Projeto</a></li>
-                <li><a href="#selecao">Seleção</a></li>
-                <li><a href="#ecopontos">Ecopontos</a></li>
+                <li><a href="#desigualdade">Desigualdade de Gênero</li>
+                <li><a href="#consequncia">Consequências</a></li>
                 <li><a href="#sobre">Sobre</a></li>
             </ul>
         </header>
-        <div id=imagem_fundo>
-             <h1 id="título">Nossos Mares</h1>
-             <h2 id="subtítulo">Saiba como selecionar os seus resíduos para você não deixar o seu lixo ir parar no mar.</h2>
-             <a id="acao" href="http://www.menos1lixo.com.br" target="_blanck">Comerçar</a>
-        </div>
-        <section id="projeto" class="destaque">
+            <div id="imagem_fundo">
+                 <h1 id="título">Igualdade de Gênero</h1>
+                 <h2 id="subtítulo">ODS5 | ONU Brasil</h2>
+                 <a id="acao" href="https://nacoesunidas.org/pos2015/ods5/" target="_blanck">Site ONU</a>
+            </div>
+        <section id="desigualdade" class="destaque">
             <div class="coluna dois">
-                <iframe width="100%" height="315" src="https://www.youtube.com/embed/ju_2NuK5O-E" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZCGLC-vziRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="coluna dois">
-            <h3 class="centralizado">Projeto</h3>
-                <p class="justificado">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
-                <p class="justificado">Aliquam auctor risus in velit hendrerit commodo. Suspendisse risus urna, tincidunt vitae leo nec, dignissim ullamcorper turpis. Sed tempus tincidunt laoreet. Nam laoreet consectetur dignissim. Pellentesque condimentum maximus neque, eget mattis justo porttitor id.</p>
-                <p class="justificado">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
+            <h2 id="social" class="centralizado">Desigualdade de Gênero</h2>
+                <p class="justificado">É considerada a base para a construção de uma sociedade livre de preconceitos e descriminações.</p>
+                <p class="justificado">Todos devem ter a liberdade para fazer suas escolhas sem a interferência ou limitação de estereótipos.</p>
+                <p class="justificado">Os direitos e oportunidades devem ser de forma igualitaria e independente do gênero, não havendo restrições baseada no sexo da pessoa.</p>
+                <p class="justificado">A luta pela igualdade de gênero se intensificou em meados do século XX, impulsionada, pelo movimento feminista.</p>
+                <p class="justificado">Entre os direitos já conquistados pelas mulheres está o direito ao voto a inserção no mercado de trabalho, dentre outros, mas ainda existe um longo caminho para descontruir a visão preconceituosa e esteriotipada que ainda existe na sociedade.</p>
+                <p class="justificado">A desigualdade de gênero pode ser vista nas pequenas situações do cotidiano, onde percebemos a segregação e divisão entre tarefas masculinas e femininas.</p>
             </div>
             </section>
-        <section id="selecao">
-            <h3 class="centralizado ">Seleção</h3>
-            <div class="coluna quatro centralizado">
-                <img class="icone" src="img/city.png" alt="Papéis" />
-                <h4>Papéis</h4>
-                <p>Praticamente todos os tipos são recicláveis, inclusive caixas do tipo longa-vida e de papelão, papel laminado, nota fiscal, envelope, jornais e revistas. Porém, precisam estar limpos e secos. Podem ser dobrados ou picados, mas não amassados.</p>
+            <div class="coluna dois centralizado">
+                <img class="icone" src="img/Brasil.png" alt="Balança com um homem de um lado e a mulher de outro" />
+                <h2>Desigualdade de gênero no Brasil</h2>
+                <p>O Brasil é um dos países com maior desigualdade entre os gêneros.</p>
+                <P>De acordo com as informações da Pesquisa Nacional por Amostra de Domicilio (Pnad), em 2014, as mulheres brasileiras trabalhadoras recebem aproximadamente 27% menos do que os homens que desempenham funções similares.</P>
+                <p>A questão profissional é apenas um exemplo das várias desigualdades vista no país, fazendo com que o abismo da desigualdade entre gêneros continue grande.</p>
             </div>
-            <div class="coluna quatro centralizado">
-                <img class="icone" src="img/wellness.png" alt="vidros" />
-                <h4>Vidros</h4>
-                <p>O vidro pode ser infinitamente reciclado e praticamente todos os tipos são recicláveis, exceto lâmpadas, cristais, espelhos, vidros temperados, louça, cerâmica, porcelana, óculos, pirex e vidros especiais, como tampo de forno e micro-ondas</p>
-            </div>
-            <div class="coluna quatro centralizado">
-                <img class="icone" src="img/work.png" alt="Metais" />
-                <h4>Metais</h4>
-                <p>São recicláveis: enlatados, ferragens, arames, chapas, canos, pregos, parafusos, cobre e alumínio. Com curiosidade, uma única lata de alumínio economiza energia suficiente para manter uma TV ligada durante três horas.</p>
-            </div>  
-            <div class="coluna quatro centralizado">    
-                <img class="icone" src="img/money.png" alt="Plásticos" />
-                <h4>Plásticos</h4>
-                <p>Praticamente todo tipo de plástico é reciclável. Não se recicla: adesivos, acrílico e cabos de panelas. Saiba que para cada 100 toneladas de plástico reciclado economiza-se 1 tonelada de petróleo.</p>
+            <div class="coluna dois centralizado">
+                <img class="icone1" src="img/escola.jpg" alt="crianças" />
+                <h2>Desigualdade de gênero na escola</h2>
+                <p>Para termos uma sociedade mais igualitaria precisamos que a conscientização das pessoas sobre a importância da igualdade entre gênero inicie nos primeiros anos de vida da criança, com o objetivo de desenvolver uma sociedade mais igualitaria e democrática.</p>
+                <p>Em 2014 o debate para inserção de metas relacionadas ao combate à discriminação e a desigualdade de gêneros do Plano Nacional de Educação (PNE) se intencificou, propondo que todos os municípios e estados brasileiros desenvolvam seus planos de ensinos focados em medidas de educação para igualdade sexual.</p>
             </div>
         </section>
-        <section id="ecopontos" class="destaque">
-            <h3 class="centralizado">Ecopontos</h3>
-            <p class="centralizado">Veja onde você pode levar o seus resíduos recicláveis.</p>
-            <div class="coluna tres centralizado">
-                <img class="imgeco" src="img/img1.jpg" alt="Onda" />
-                <h4>Itacorubi</h4>
-                <p>Rodovia Admar Gonzaga, 72</p>  
+        <section id="consequncia" class="destaque">
+            <h2 class="centralizado">Consequências</h2>
+            <p class="centralizado">A desigualdade de gênero é um fenômeno social e cultural que ocorre uma discriminação entre pessoas</p>
+            <p class="centralizado">devido ao seu gênero, ou seja, entre homens e mulheres.</p>  
+            <div class="coluna dois1 centralizado">
+                <img class="imgcon" src="img/download (1).jpg" alt="Machismo" />
+                <h3 class="centralizado">Nível Social - Machismo -</h3>
+                <p>No relacionamento familiar a mulher e subordinada ao esposo ou ao pai.</p>  
             </div>
-            <div class="coluna tres centralizado">
-                <img class="imgeco" src="img/img2.jpg" alt="Tartaruga" />  
-                <h4>Morro das Pedras</h4>
-                <p>Rua Francisco Vieira, 198, em frente à Padaria Moreira</p>
-            </div>
-            <div class="coluna tres centralizado">
-                <img class="imgeco" src="img/img3.jpg" alt="Praia" />
-                <h4>Canasvieiras</h4>
-                <p>Rua Desembargador Maurílio Coimbra</p>
+            <div class="coluna dois1 centralizado">
+                <img class="imgcon" src="img/download.jpg" alt="Desvalorização de gênero" />  
+                <h3 class="centralizado">Nível Econômico - Desvalorização -</h3>
+                <p>Diferença salarial entre homens e mulherers que desempenham o mesmo cargo.</p>
             </div>
         </section>
         <section id="sobre">
             <div class="coluna dois">
-                <h3>Sobre mim</h3>
-                <p>Joana da Silva</p>
-                <p class="justificado">Aenean porta, justo non aliquet interdum, risus nibh fringilla orci, nec lacinia justo sem a lorem. Pellentesque sagittis finibus risus, vitae viverra metus commodo quis. In sed elit cursus, tincidunt lectus vel, mattis dolor. Donec vel libero lobortis, cursus turpis a, scelerisque lorem.</p>
-            </div>
-            <div class="coluna dois">  
-                <img width="100%" src="img/eu.jpg" alt="Uma mulher com notebook" />
+                <h3 class="a">Sobre mim</h3>
+                <p>Arthur Paulino Malgarisi Aguiar</p>
+                <p class="justificado">Meu nome é Arthur, tenho 17 anos, sou de Turvo-Santa Catarina, e escolhi como tema para o projeto Meu Primeiro Site, criar o site baseada na desigualdade de gênero que enfrentamos no Brasil e no mundo.</p>
             </div>
         </section>
         <footer>
