--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <div id="logodiv">
-                <img id="logo" src="img/images.jpg" alt="Igualdade de Gênero">
+                <img id="logo" src="img/logo esse.jpg" alt="Igualdade de Gênero">
             </div>
             <ul id="Menu">
                 <li><a href="#desigualdade">Desigualdade de Gênero</li>
@@ -26,7 +26,7 @@
             </div>
             <div class="coluna dois">
             <h2 id="social" class="centralizado">Desigualdade de Gênero</h2>
-                <p class="justificado">É considerada a base para a construção de uma sociedade livre de preconceitos e descriminações.</p>
+                <p class="justificado">É considerada a base para a construção de uma sociedade livre de preconceitos e discriminações.</p>
                 <p class="justificado">Todos devem ter a liberdade para fazer suas escolhas sem a interferência ou limitação de estereótipos.</p>
                 <p class="justificado">Os direitos e oportunidades devem ser de forma igualitaria e independente do gênero, não havendo restrições baseada no sexo da pessoa.</p>
                 <p class="justificado">A luta pela igualdade de gênero se intensificou em meados do século XX, impulsionada, pelo movimento feminista.</p>
@@ -35,7 +35,7 @@
             </div>
             </section>
             <div class="coluna dois centralizado">
-                <img class="icone" src="img/Brasil.png" alt="Balança com um homem de um lado e a mulher de outro" />
+                <img class="icone" src="img/escola1.jpg" alt="Balança com um homem de um lado e a mulher de outro" />
                 <h2>Desigualdade de gênero no Brasil</h2>
                 <p>O Brasil é um dos países com maior desigualdade entre os gêneros.</p>
                 <P>De acordo com as informações da Pesquisa Nacional por Amostra de Domicilio (Pnad), em 2014, as mulheres brasileiras trabalhadoras recebem aproximadamente 27% menos do que os homens que desempenham funções similares.</P>
@@ -53,7 +53,7 @@
             <p class="centralizado">A desigualdade de gênero é um fenômeno social e cultural que ocorre uma discriminação entre pessoas</p>
             <p class="centralizado">devido ao seu gênero, ou seja, entre homens e mulheres.</p>  
             <div class="coluna dois1 centralizado">
-                <img class="imgcon" src="img/download (1).jpg" alt="Machismo" />
+                <img class="imgcon" src="img/machismo.jpg" alt="Machismo" />
                 <h3 class="centralizado">Nível Social - Machismo -</h3>
                 <p>No relacionamento familiar a mulher e subordinada ao esposo ou ao pai.</p>  
             </div>
