--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Igualdade Gênero | ODS5 ONU</title>
+        <title>Igualdade de Gênero | ODS5 ONU</title>
         <link rel="stylesheet" href="estilo.css">
         <meta name="viewport" content="width:device-width, initial-scale=1.0">
     </head>
@@ -25,27 +25,35 @@
                 <iframe width="100%" height="315" src="https://www.youtube.com/embed/ZCGLC-vziRc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
             <div class="coluna dois">
-            <h2 id="social" class="centralizado">Desigualdade de Gênero</h2>
-                <p class="justificado">É considerada a base para a construção de uma sociedade livre de preconceitos e discriminações.</p>
-                <p class="justificado">Todos devem ter a liberdade para fazer suas escolhas sem a interferência ou limitação de estereótipos.</p>
-                <p class="justificado">Os direitos e oportunidades devem ser de forma igualitaria e independente do gênero, não havendo restrições baseada no sexo da pessoa.</p>
+            <h2 id="social" class="centralizado">Igualdade de Gênero</h2>
+                <p class="justificado">Igualdade de gênero é a base para a construção de uma sociedade sem discriminações.</p>
+                <p class="justificado">É importante que todos tenham liberdade de escolhas, independente de seu sexo.</p>
+                <p class="justificado">No inciso primeiro do artigo 5º da Constituição Federal de 1988, esta presente a igualdade de gênero, qualificando homens e mulheres com iguais direitos e obrigações, também é conhecida como princípio da isonomia.</p>
                 <p class="justificado">A luta pela igualdade de gênero se intensificou em meados do século XX, impulsionada, pelo movimento feminista.</p>
-                <p class="justificado">Entre os direitos já conquistados pelas mulheres está o direito ao voto a inserção no mercado de trabalho, dentre outros, mas ainda existe um longo caminho para descontruir a visão preconceituosa e esteriotipada que ainda existe na sociedade.</p>
-                <p class="justificado">A desigualdade de gênero pode ser vista nas pequenas situações do cotidiano, onde percebemos a segregação e divisão entre tarefas masculinas e femininas.</p>
+                <p class="justificado">Entre os direitos já conquistados pelas mulheres está o direito ao voto, a inserção no mercado de trabalho, dentre outros. Mas ainda existe um longo caminho para percorrer e descontruir a visão preconceituosa e machista que ainda assola a sociedade.</p>
+                <p class="justificado">A desigualdade de gênero é vista rotineiramente nas pequenas situações do cotidiano, onde se percebe a segregação e a divisão de tarefas entre "masculinas" e "femininas".</p>
             </div>
             </section>
-            <div class="coluna dois centralizado">
-                <img class="icone" src="img/escola1.jpg" alt="Balança com um homem de um lado e a mulher de outro" />
+            <div class="coluna tres centralizado">
+                <img class="icone" src="img/240_F_207601456_9OUQmAwchRAOIJ99hA1slFCmJkkYdNad.jpg" alt="Quatro homens subindo uma escada, e uma mulher não subindo." />
                 <h2>Desigualdade de gênero no Brasil</h2>
-                <p>O Brasil é um dos países com maior desigualdade entre os gêneros.</p>
-                <P>De acordo com as informações da Pesquisa Nacional por Amostra de Domicilio (Pnad), em 2014, as mulheres brasileiras trabalhadoras recebem aproximadamente 27% menos do que os homens que desempenham funções similares.</P>
-                <p>A questão profissional é apenas um exemplo das várias desigualdades vista no país, fazendo com que o abismo da desigualdade entre gêneros continue grande.</p>
+                <p>De acordo com o "Relatório Mundial Sobre a Desigualdade de Gênero 2020" o Brasil está classificado na posição 92ª entre 153 países, na avaliação da igualdade de gênero no mundo, ganhando 3 posições desde o último forúm.</p>
+                <P>Em uma análise dentre os países da América Latina, o Brasil ocupa 22º lugar entre os 25 países em desigualdade de gênero.</P>
+                <p>Segundo o relatório do "Forúm Econômico Mundial de 2018" será necessário mais de 200 anos para se existir uma igualdade de gênero no local de trabalho.</p>
             </div>
-            <div class="coluna dois centralizado">
-                <img class="icone1" src="img/escola.jpg" alt="crianças" />
+            <div class="coluna tres centralizado">
+                <img class="icone1" src="img/school.jpg" alt="Quadro negro com os símbolo dos dois sexos juntos." />
                 <h2>Desigualdade de gênero na escola</h2>
-                <p>Para termos uma sociedade mais igualitaria precisamos que a conscientização das pessoas sobre a importância da igualdade entre gênero inicie nos primeiros anos de vida da criança, com o objetivo de desenvolver uma sociedade mais igualitaria e democrática.</p>
-                <p>Em 2014 o debate para inserção de metas relacionadas ao combate à discriminação e a desigualdade de gêneros do Plano Nacional de Educação (PNE) se intencificou, propondo que todos os municípios e estados brasileiros desenvolvam seus planos de ensinos focados em medidas de educação para igualdade sexual.</p>
+                <p>Visto que a desigualdade de gênero é um dos maiores desafios contra os direitos humanos, precisamos criar mecanismo de conscientização na busca por uma sociedade mais igualitaria.</p>
+                <p>Para que a sociedade entenda a importância da igualdade entre gêneros, é necessário que as orientações se iniciem nos primeiros anos de vida de uma criança tornando-a mais democrática.</p>
+                <p>Em 2014 o debate para inserção de metas relacionadas ao combate à discriminação e a desigualdade de gêneros do Plano Nacional de Educação (PNE) se intensificou, propondo que todos os municípios e estados brasileiros desenvolvam seus planos de ensino focados em medidas de educação para igualdade sexual.</p>
+            </div>
+            <div class="coluna tres centralizado">
+                <img class="icone" src="img/econo.jpg" alt="política" />
+                <h2>Desigualdade de gênero na política brasileira</h2>
+                <p>Mesmo as mulheres representando 52,63% do eleitorado brasileiro, o Brasil se classifica como um dos países com menor representação feminina na política.</p>
+                <p>Várias ações foram feitas ao longo do tempo com o intuito de promover a participação da mulher na política. O Tribunal Regional Eleitoral lançou o site #participaMulher, homenageando as mulheres que fizeram e ainda fazem parte da política e da justiça eleitoral brasileira, objetivando também o incentivo a inserção de novas mulheres na política e justiça brasileira.</p>
+                <p>Como contribuição para ampliação da participação feminina a legislação eleitoral obriga o preenchimento de 30% e de no maxímo de 70% de candidatos de cada sexo nos pleitos eleitorais, visto que antes a regra era somente por orientação, e se percebeu que os partidos não se empenhavam em preencher as vagas com candidatas mulheres.</p>
             </div>
         </section>
         <section id="consequncia" class="destaque">
@@ -58,16 +66,16 @@
                 <p>No relacionamento familiar a mulher e subordinada ao esposo ou ao pai.</p>  
             </div>
             <div class="coluna dois1 centralizado">
-                <img class="imgcon" src="img/download.jpg" alt="Desvalorização de gênero" />  
+                <img class="imgcon" src="img/escola1.jpg" alt="Desvalorização de gênero" />  
                 <h3 class="centralizado">Nível Econômico - Desvalorização -</h3>
-                <p>Diferença salarial entre homens e mulherers que desempenham o mesmo cargo.</p>
+                <p>Diferença salarial entre homens e mulheres que desempenham o mesmo cargo.</p>
             </div>
         </section>
         <section id="sobre">
             <div class="coluna dois">
                 <h3 class="a">Sobre mim</h3>
                 <p>Arthur Paulino Malgarisi Aguiar</p>
-                <p class="justificado">Meu nome é Arthur, tenho 17 anos, sou de Turvo-Santa Catarina, e escolhi como tema para o projeto Meu Primeiro Site, criar o site baseada na desigualdade de gênero que enfrentamos no Brasil e no mundo.</p>
+                <p class="justificado">Meu nome é Arthur, tenho 17 anos, sou de Turvo - SC, sou estudante do 3º ano do ensino médio inovador e escolhi como tema para o projeto "Meu Primeiro Site", a igualdade de gênero que enfrentamos no Brasil e no mundo.</p>
             </div>
         </section>
         <footer>
@@ -77,7 +85,7 @@
             </div>
             <div class="coluna dois">
                 <h3>Créditos</h3>
-                <p>Ícones de Freepik, logo de Logomark, imagens de ____</p>
+                <p>Ícones de Freepik, logo de Freepik, imagens de Freepik, vídeo de ONU Mulheres Brasil.</p>
         </footer>
     </body>
 </html>
